--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
       <div class="container">
         <div class="row justify-content-center" data-aos="zoom-out">
           <div class="col-xl-7 col-lg-9 text-center">
-            <h1>Hydrolife</h1>
-            <h2>engineering and consultant</h2>
+            <h1>HYDROLIFE</h1>
+            <h2>ENGINEERING AND CONSULTANT</h2>
             <br>
             <h5>ให้เรื่องน้ำเป็นเรื่องง่าย ครบจบในที่เดียว</h5>
           </div>
