--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>ผลิตภัณฑ์และอุปกรณ์ของเรา</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <p>รายละเอียดผลิตภัณฑ์และอุปกรณ์ของเรา</p>
       </div><!-- End Section Title
        -->
 
@@ -415,15 +415,16 @@
 
           <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="100">
             <div class="pricing-item">
-              <h3>Chemical for water & wastewater treatment</h3>
+              <h3>สารเคมีสำหรับการบำบัดน้ำและน้ำเสีย</h3>
               <ul>
-                <li><i class="bi bi-check"></i> <span>RO System Chemical (RO anti Scale / Non oxidizing biocide for RO)</span></li>
-                <li><i class="bi bi-check"></i> <span>Coagulatant / Flocculant</span></li>
-                <li><i class="bi bi-check"></i> <span>Heavy metal removes</span></li>
-                <li><i class="bi bi-check"></i> <span>Defoamer</span></li>
-                <li><i class="bi bi-check"></i> <span>Cleaning chemical</span></li>
-                <li><i class="bi bi-check"></i> <span>Basic chemical</span></li>
-                <li><i class="bi bi-check"></i> <span>Cooling, chiller and boiler system chemical</span></li>
+                <li><i class="bi bi-check"></i> <span>สารเคมีสำหรับระบบ RO (สารป้องกันการเกิดตะกรันใน RO / สารฆ่าเชื้อที่ไม่ทำให้เกิดออกซิเดชันสำหรับ RO)
+                </span></li>
+                <li><i class="bi bi-check"></i> <span>สารตกตะกอน / สารช่วยการจับกลุ่ม</span></li>
+                <li><i class="bi bi-check"></i> <span>สารกำจัดโลหะหนัก</span></li>
+                <li><i class="bi bi-check"></i> <span>สารลดฟอง</span></li>
+                <li><i class="bi bi-check"></i> <span>สารทำความสะอาด</span></li>
+                <li><i class="bi bi-check"></i> <span>สารเคมีพื้นฐาน</span></li>
+                <li><i class="bi bi-check"></i> <span>สารเคมีสำหรับระบบทำความเย็น, ระบบชิลเลอร์ และระบบหม้อไอน้ำ</span></li>
               </ul>
               <!-- <div class="text-center"><a href="#" class="buy-btn">Buy Now</a></div> -->
             </div>
@@ -431,15 +432,15 @@
 
           <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="100">
             <div class="pricing-item">
-              <h3>Media for water & wastewater treatment</h3>
+              <h3>สื่อสำหรับการบำบัดน้ำและน้ำเสีย</h3>
               <ul>
-                <li><i class="bi bi-check"></i> <span>Selected sand & gravel</span></li>
-                <li><i class="bi bi-check"></i> <span>Manganese green sand & anthracite</span></li>
-                <li><i class="bi bi-check"></i> <span>Activated carbon filter</span></li>
-                <li><i class="bi bi-check"></i> <span>Cation & Anion Resin for Softener and Di system</span></li>
-                <li><i class="bi bi-check"></i> <span>Cartridge filter, bag filter & filter cloth</span></li>
-                <li><i class="bi bi-check"></i> <span>UF & RO membrane</span></li>
-                <li"><i class="bi bi-check"></i> <span>UV Lamp</span></li>
+                <li><i class="bi bi-check"></i> <span>ทรายและกรวดที่คัดสรรแล้ว</span></li>
+                <li><i class="bi bi-check"></i> <span>ทรายเขียวแมงกานีสและแอนทราไซต์</span></li>
+                <li><i class="bi bi-check"></i> <span>ไส้กรองคาร์บอนกัมมันต์</span></li>
+                <li><i class="bi bi-check"></i> <span>เรซินคาไอออนและแอนไอออนสำหรับระบบซอฟเทนเนอร์และระบบ DI</span></li>
+                <li><i class="bi bi-check"></i> <span>ไส้กรอง, ไส้กรองแบบถุง และผ้ากรอง</span></li>
+                <li><i class="bi bi-check"></i> <span>เยื่อกรองแบบ UF และ RO</span></li>
+                <li"><i class="bi bi-check"></i> <span>หลอดยูวี (UV Lamp)</span></li>
               </ul>
                <!-- <div class="text-center"><a href="#" class="buy-btn">Buy Now</a></div> -->
             </div>
@@ -447,16 +448,16 @@
 
           <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="100">
             <div class="pricing-item">
-              <h3>Equipment for water and wastewater treatment system</h3>
+              <h3>อุปกรณ์สำหรับระบบบำบัดน้ำและน้ำเสีย</h3>
               <ul>
-                <li><i class="bi bi-check"></i> <span>Rotameter, Flow meter and magnetic flow meter</span></li>
-                <li><i class="bi bi-check"></i> <span>Filter press and Screw press</span></li>
-                <li><i class="bi bi-check"></i> <span>Pump for water & wastewater treatment system</span></li>
-                <li><i class="bi bi-check"></i> <span>Chemical feed pump</span></li>
-                <li><i class="bi bi-check"></i> <span>Pe, FRP and Stanless Tank</span></li>
-                <li><i class="bi bi-check"></i> <span>Valve, Air control valve and  electric actuator</span></li>
-                <li><i class="bi bi-check"></i> <span>pH CONTROLER AND CONDUCTIVITY CONTROLER</span></li>
-                <li><i class="bi bi-check"></i> <span>Etc.</span></li>
+                <li><i class="bi bi-check"></i> <span>โรมิเตอร์, มาตรวัดการไหล และมาตรวัดการไหลแม่เหล็ก</span></li>
+                <li><i class="bi bi-check"></i> <span>เครื่องอัดกรองและเครื่องอัดแบบสกรู</span></li>
+                <li><i class="bi bi-check"></i> <span>ปั๊มสำหรับระบบบำบัดน้ำและน้ำเสีย</span></li>
+                <li><i class="bi bi-check"></i> <span>ปั๊มจ่ายสารเคมี</span></li>
+                <li><i class="bi bi-check"></i> <span>ถัง PE, FRP และสแตนเลส</span></li>
+                <li><i class="bi bi-check"></i> <span>วาล์ว, วาล์วควบคุมอากาศ และตัวกระตุ้นไฟฟ้า</span></li>
+                <li><i class="bi bi-check"></i> <span>ตัวควบคุมค่า pH และตัวควบคุมค่าการนำไฟฟ้า</span></li>
+                <li><i class="bi bi-check"></i> <span>อื่น ๆ</span></li>
               </ul>
              <!-- <div class="text-center"><a href="#" class="buy-btn">Buy Now</a></div> -->
             </div>
